fixed the bot nav bar. Works on mobile too.

--- a/styles/projectEdit.css
+++ b/styles/projectEdit.css
@@ -2,4 +2,5 @@
     margin: auto auto;
     margin-top: 10vh;
     height: 60vh;
+    max-width: 40rem;
 }
